Denora Version 1.4.0
--------------------
Provided by Denora Team <dev@denorastats.org> - 2007
08/17 A Admins passwords are now hidden in debug messages         [#414]
08/16 A Added recompile option to Makefile, make recompile        [ #00]
08/16 A Added new protocol ScaryNet	                          [ #00]
08/13 A Added XMLRPC documentation                                [#407]
08/12 A Added option to track only +r users on chanstats          [ #00]
08/10 A New optional token on connect block for quitprefix        [#404]
07/25 A Admin passwords are now MD5-encrypted in SQL              [ #00]
07/18 A Moved deprecated ircd protocol files out of the way       [ #00]
07/18 A Made the ./Config process more clear about MySQL support  [ #00]
02/28 A Added swhois support to nefarious                         [ #00]
02/28 A Added P10 account support                                 [ #00]
01/11 A Improved P10 hidden host support                          [ #00]
11/17 U Updated GeoIP database file                               [ #00]
09/04 U Updated GeoIP database file                               [ #00]
08/23 U Updated check_db                                          [ #00]
08/23 U Removed unneccessary rdb_escape usage                     [ #00]
08/23 U Updated NOQUIT/QS support not to rely on CAPAB            [ #00]
08/23 U Updated autoconf stuff                                    [#423]
08/16 U Updated uid and userlist indexes                          [#395]
08/16 U Updated p10 to do double check before m_notice            [ #00]
08/15 U Added a new question/answer to docs/FAQ                   [ #00]
08/14 U Replaced old include/version.sh.c for include/version.js  [ #00]
08/14 U Replaced old install.vbs for new Anope install.js         [ #00]
08/14 U Updated Windows paths for SDK and MySQL                   [ #00]
08/10 U Improved Local Kills detection                            [#404]
08/09 U Updated FAQ file regarding bug #314                       [#314]