@@ -1,9 +1,10 @@
 Denora Version 1.4.0
 --------------------
 Provided by Denora Team <dev@denorastats.org> - 2007
+11/18 A Added Invite Exception support to inspircd module         [ #00]
 08/17 A Admins passwords are now hidden in debug messages         [#414]
 08/16 A Added recompile option to Makefile, make recompile        [ #00]
-08/16 A Added new protocol ScaryNet	                          [ #00]
+08/16 A Added new protocol ScaryNet	                         [ #00]
 08/13 A Added XMLRPC documentation                                [#407]
 08/12 A Added option to track only +r users on chanstats          [ #00]
 08/10 A New optional token on connect block for quitprefix        [#404]
@@ -31,6 +32,11 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+11/18 F Fixed denora not reporting version correctly to inspircd  [ #00]
+11/18 F Fixed inspircd not catching ircd versions                 [ #00]
+11/18 F Fixed wrong characters for aq prefixes for inspircd       [ #00]
+11/18 F Fixed wrong user and chan modes in inspircd sql structure [ #00]
+11/18 F Fixed Stats bot modes not set in sql                      [ #00]
 11/17 F Fixed problem on user quits with some mysql servers       [#446]
 11/14 F Fixed topic setter not handled correctly in asuka         [ #00]
 11/12 F Fixed chanstats problems after removing user from exclude [#427]
